# FRC-Athena

./: .gitignore  ExampleVendorJson.json  FRC6390-Athena.json  FRCAthena2024.json  README.md  athena-bootstrap.gradle  athena-sync.gradle  build.gradle  config.gradle  gradlew  gradlew.bat  pom.xml  publish.gradle  settings.gradle  settings.xml
.github/workflows/: ci.yml
athena-arcp/: README.md
athena-arcp/host-dashboard/: .dockerignore  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
athena-arcp/host-dashboard/docker/: Dockerfile.builder
athena-arcp/host-dashboard/scripts/: docker-build.sh  run-release.mjs  run-release.sh  tauri-launch.mjs  tauri-launch.sh
athena-arcp/host-dashboard/src/: App.svelte  app.css  main.ts
athena-arcp/host-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
athena-arcp/host-dashboard/src-tauri/icons/: icon.icns
athena-arcp/host-dashboard/src-tauri/src/: lib.rs  main.rs  nt4_client.rs
athena-arcp/host-dashboard/src/components/: ActionsScreen.svelte  AddWidgetModal.svelte  CameraTuningScreen.svelte  ControlTunerScreen.svelte  DashboardContextMenu.svelte  DiagnosticsScreen.svelte  FloatingDock.svelte  GlobalRail.svelte  InspectorPanel.svelte  LayoutToolPalette.svelte  LogsScreen.svelte  MechanismsScreen.svelte  StatusBar.svelte  (+9 more)
athena-arcp/java/: README.md  build.gradle
athena-arcp/rust/: .dockerignore  Cargo.toml  README.md
athena-arcp/rust/.cargo/: config.toml
athena-arcp/rust/crates/arcp-core/: Cargo.toml
athena-arcp/rust/crates/arcp-core/src/: codec.rs  constants.rs  lib.rs  types.rs
athena-arcp/rust/crates/arcp-dashboard/: Cargo.toml  README.md
athena-arcp/rust/crates/arcp-dashboard/src/: args.rs  control.rs  http.rs  json.rs  lib.rs  manifest.rs  state.rs  telemetry.rs  value.rs
athena-arcp/rust/crates/arcp-dashboard/tests/: dashboard_integration_test.rs
athena-arcp/rust/crates/arcp-jni/: Cargo.toml
athena-arcp/rust/crates/arcp-jni/src/: java_publish.rs  java_runtime.rs  lib.rs  runtime.rs
athena-arcp/rust/crates/arcp-server/: Cargo.toml
athena-arcp/rust/crates/arcp-server/examples/: sim_dashboard.rs  sim_hardware.rs  sim_loopback.rs  sim_server.rs  sim_stress.rs
athena-arcp/rust/crates/arcp-server/examples/layouts/: sim_all_layouts.json  sim_hardware_layout.json
athena-arcp/rust/crates/arcp-server/src/: config.rs  control.rs  lib.rs  nt4_bridge.rs  parsing.rs  realtime.rs  server.rs
athena-arcp/rust/crates/arcp-server/tests/: control_and_types_test.rs  sim_loopback_test.rs
athena-arcp/rust/docker/: Dockerfile.cross
athena-choreo/: build.gradle
athena-core/: build.gradle
athena-ctre/: build.gradle
athena-examples/: build.gradle
athena-helios/: build.gradle
athena-limelight/: build.gradle
athena-pathplanner/: build.gradle
athena-photonvision/: build.gradle
athena-plugin/: README.md  build.gradle
athena-rev/: build.gradle
athena-studica/: build.gradle
athena-test/: build.gradle  networktables.json.bck
docs/: README.md
docs/core/: README.md  auto-registry-behavior.md  auto-selection-and-execution-behavior.md  commands-control-behavior.md  commands-movement-behavior.md  commands-vision-behavior.md  controllers-and-filters-behavior.md  hooks-and-lifecycle-behavior.md  localization-behavior.md  loop-timing-and-robot-time-behavior.md  motion-limits-and-runtime-utils.md  registry-and-backends-behavior.md  robot-speeds-behavior.md  robotcore-lifecycle-and-phase-hooks.md  service-loader-provider-semantics.md  sim-motor-behavior.md  telemetry-registry-behavior.md  test-mode-safety.md  typed-inputs-behavior.md  wpilib-project-setup.md
docs/diagnostics/: README.md  diagnostics-behavior.md
docs/drivetrain/: README.md  differential-drivetrain-behavior.md  swerve-drivetrain-behavior.md  sysid-examples.md
docs/hardware/: README.md  hardware-factories-behavior.md  imu-and-encoder-edge-cases.md  vendor-module-service-contracts.md
docs/mechanisms/: README.md  catalog-examples-map.md  catalog-file-map.md  catalog-test-map.md  config-apply-export-behavior.md  control-loop-and-hooks.md  infrastructure-sections-and-visualization.md  state-machine-behavior.md  state-seed-runtime-behavior.md  superstructure-behavior.md  sysid-examples.md
docs/networktables/: README.md  networktables-wrapper-behavior.md
docs/plugin/: README.md  state-dsl-plugin-behavior.md
docs/sensors/: README.md  sensor-wrapper-behavior.md
docs/specs/: README.md  arcp-host-dashboard-baseline.md  realtime-telemetry-protocol-spec.md
gradle/: libs.versions.toml
vendordeps/: FRC6390-Athena-CTRE.json  FRC6390-Athena-Choreo.json  FRC6390-Athena-Core.json  FRC6390-Athena-HeliOS.json  FRC6390-Athena-Limelight.json  FRC6390-Athena-Pathplanner.json  FRC6390-Athena-PhotonVision.json  FRC6390-Athena-REV.json  FRC6390-Athena-Studica.json  Studica-2026.0.0.json
(+659 files in other folders)
