[package]
name = "arcp-host-dashboard"
version = "0.1.0"
description = "Host-side Tauri dashboard for ARCP"
authors = ["FRC 6390 Athena"]
edition = "2021"

[lib]
name = "arcp_host_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "arcp-host-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
arcp-dashboard = { path = "../../rust/crates/arcp-dashboard" }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
