[package]
name = "arcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "arcp_server"
path = "src/lib.rs"

[dependencies]
arcp-core = { path = "../arcp-core" }
nt_client = "0.4.0"
tokio = { version = "1.48.0", default-features = false, features = ["rt", "time", "net", "macros"] }
rmpv = "1.3.0"
